samples/_failures_safe/1761248923_f89391_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_52c43c59.c: In function ‘main’:
./samples/SAFE/__tmp_52c43c59.c:154:27: error: expected ‘)’ at end of input
  154 |     if (strlen(input) == 0
      |        ~                  ^
      |                           )
./samples/SAFE/__tmp_52c43c59.c:154:5: error: expected declaration or statement at end of input
  154 |     if (strlen(input) == 0
      |     ^~
